app-authors-deplyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-authors
spec:
  replicas:  1
  selector:
    matchLabels:
      app: app-authors
  template:
    metadata:
      labels:
        app: app-authors
    spec:
      containers:
        - name: app-authors
          image: sterk55/app-authors
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: app-authors-service
spec:
  type: ClusterIP
  selector:
    app: app-authors
  ports:
    - protocol: TCP
      port:  8080
      targetPort:  7001
