app-books-deplyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-books
  template:
    metadata:
      labels:
        app: app-books
    spec:
      containers:
        - name: app-books
          image: sterk55/app-books
          ports:
            - containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: app-books-service
spec:
  type: ClusterIP
  selector:
    app: app-books
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 7002
