helidon-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helidon-app-gateway
  namespace: tu-namespace
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helidon-app
  namespace: tu-namespace
spec:
  hosts:
    - "*"
  gateways:
    - helidon-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: helidon-app-service
            port:
              number: 7001
